fix: Expand text overlay cross icon on mobile fix: In VisualFileUploader icon overlays input and prevent file uploading

--- a/src/components/fileLoaders/VisualUploadFile/visual-upload-file.scss
+++ b/src/components/fileLoaders/VisualUploadFile/visual-upload-file.scss
@@ -54,13 +54,11 @@ $width: 160px;
       font: $font-bold-14;
       font-size: 14px;
       text-align: center;
-      z-index: 1;
     }
 
     .load-file__img {
       width: 24px;
       height: 30px;
-      z-index: 1;
     }
 
     .load-file__background {
